reverted SlotSSA and applied only minimal necessary changes